# EW2023

./: LICENSE  README.md
BarTypeLCD/: README.md
BarTypeLCD/Hdr/: App.h  App_BarLCD_EW2020.h  App_BarLCD_EW2020_2nd.h  EV_ChargePoint_Protocol.h  EV_ChargePoint_Transport.h  Page_Authenticate.h  Page_Chooselanguage.h  Page_Init_CarBlow.h  Page_Init_Logo.h  Page_Init_Textdown.h  Page_Plugin.h  Page_Report.h  Uart.h  page_Charging.h
BarTypeLCD/Project/Msvc/: BarTypeLCD_MSVC.sln  BarTypeLCD_Msvc.vcxproj  BarTypeLCD_Msvc.vcxproj.filters
BarTypeLCD/Project/Msvc_Emulator/: BarTypeLCD_Emulator.sln  BarTypeLCD_Emulator.vcxproj  BarTypeLCD_Emulator.vcxproj.filters
BarTypeLCD/Project/RP2040/: .gitignore  .project
BarTypeLCD/Src/: App.c  App_BarLCD_EW2020.c  App_BarLCD_EW2020_2nd.c  App_Data.c  Page_Authenticate.c  Page_Chooselanguage.c  Page_Init_CarBlow.c  Page_Init_Logo.c  Page_Init_Textdown.c  Page_Plugin.c  Page_Report.c  Uart_Ft9XX.c  Uart_RP2040.c  page_Charging.c
BarTypeLCD/Test/Flash/: BT81X_Flash_BarTypeLCD.map
BarTypeLCD/common/: CMakeLists.txt
BarTypeLCD/common/application/: Common.c  Common.h  FileIo.c  FileIo.h  FileTransfer.c  FileTransfer.h  FlashHelper.c  FlashHelper.h  Gesture.c  Gesture.h  Image.c  Image.h  Logo.c  Logo.h  Maths.c  Maths.h
BarTypeLCD/common/application/fatfs/source/: CMakeLists.txt  diskio_ft9xx.c  diskio_rp2040.c  ffconf.h
BarTypeLCD/common/application/fatfs/source/hardware_gpio_ex/: CMakeLists.txt  gpio_ex.c
BarTypeLCD/common/application/fatfs/source/hardware_gpio_ex/include/hardware/: gpio_ex.h
BarTypeLCD/common/eve_hal/: CMakeLists.txt  EVE_Cmd.c  EVE_Cmd.h  EVE_CoCmd.c  EVE_CoCmd.h  EVE_CoCmd_IO.c  EVE_CoCmd_State.c  EVE_CoCmd_Widgets.c  EVE_CoDl.c  EVE_CoDl.h  EVE_Config.h  EVE_GpuDefs.h  EVE_GpuDefs_BT81X.c  EVE_GpuDefs_FT80X.c  EVE_GpuDefs_FT81X.c  EVE_GpuTypes.h  EVE_Hal.c  EVE_Hal.h  EVE_HalDefs.h  EVE_HalImpl.h  EVE_HalImpl_BT8XXEMU.c  EVE_HalImpl_BT8XXEMUC.c  EVE_HalImpl_FT4222.c  EVE_HalImpl_FT9XX.c  EVE_HalImpl_MPSSE.c  (+22 more)
CarClimateControl/: README.md
CarClimateControl/CircuitPython/: code.py
CarDashBoard/: CMakeLists.txt  README.md
CarDashBoard/Hdr/: EW2023_CarDashBoard.h  EW2023_CarDashBoard_Race_Data.h  Eve_Ext_Callist.h  Eve_Ext_Input.h
CarDashBoard/Project/FT9XX/FT900/: .cproject  .project
CarDashBoard/Project/FT9XX/FT930/: .cproject  .project
CarDashBoard/Project/Msvc/: EW2023_CarDashBoard_MSVC.sln  EW2023_CarDashBoard_Msvc.vcxproj  EW2023_CarDashBoard_Msvc.vcxproj.filters
CarDashBoard/Project/Msvc_Emulator/: EW2023_CarDashBoard_Emulator.sln  EW2023_CarDashBoard_Emulator.vcxproj  EW2023_CarDashBoard_Emulator.vcxproj.filters
CarDashBoard/Sdcard/Flash/: EW2023_CarDashBoard.map  EW2023_CarDashBoardd.edf
CarDashBoard/Src/: EW2023_CarDashBoard.c  EW2023_CarDashBoard_CallList_Record.c  EW2023_CarDashBoard_CallList_Replay.c  Eve_Ext_Callist.c  Eve_Ext_Input_FT9XX.c  Eve_Ext_Input_RP2040.c  Eve_Ext_Input_window.c  Serial_Replay.c
CarDashBoard/common/: Readme.txt
CarDashBoard/common/application/: Common.c  Common.h  FileIo.c  FileTransfer.c  Gesture.c  Logo.h  Maths.c  Maths.h
CarDashBoard/common/application/Arduino/: Hal_I2C.cpp
CarDashBoard/common/application/fatfs/source/: diskio_ft9xx.c  diskio_rp2040.c
CarDashBoard/common/esd_core/: CMakeLists.txt  Esd_Base.c  Esd_BitmapHandle.c  Esd_BitmapInfo.c  Esd_BitmapInfo.h  Esd_CheckTypeSizes.c  Esd_CoWidget.c  Esd_CoWidget.h  Esd_Context.c  Esd_Context.h  Esd_Core.h  Esd_Render_Bitmap.c  Esd_Render_Circle.c  Esd_Render_Gradient.c  Esd_Render_Rect.c  Esd_Support.c  Esd_TouchTag.c  Esd_Utility.h
CarDashBoard/common/esd_core/Compatibility/: CoPro_Cmds.h  FT_CoPro_Cmds.h  Ft_Esd_Dl.h  Ft_Esd_FontInfo.h  Ft_Esd_GpuAlloc.h  Ft_Esd_Primitives.h  Ft_Esd_ResourceInfo.h
CarDashBoard/common/eve_hal/: .editorconfig  EVE_Cmd.c  EVE_CoCmd_IO.c  EVE_CoCmd_State.c  EVE_GpuDefs.h  EVE_GpuDefs_BT81X.c  EVE_GpuTypes.h  EVE_Hal.h  EVE_Hal.md  EVE_HalImpl_BT8XXEMUC.c  EVE_HalImpl_FT9XX.c  EVE_HalImpl_MPSSE.c  EVE_HalImpl_MULTI.c  EVE_HalImpl_RP2040.c  EVE_HalImpl_WIN32.c  EVE_ILI9488_FT9XX.c  EVE_ILI9488_RP2040.c  EVE_IntTypes.h  EVE_LoadFile.h  EVE_MediaFifo.c  EVE_Platform_FT4222.h  EVE_Platform_MPSSE.h  EVE_Platform_WIN32.h  EVE_Util.c
CarDashBoard/common/eve_hal/Hdr/: FT_LoadFile.h  FT_Platform.h  Gpu.h  Gpu_CoCmd.h  Gpu_Hal.h  Hal_Config.h  Platform.h  WinTypes.h  bt8xxemu.h  bt8xxemu_inttypes.h  libMPSSE_spi.h
CarSeatAdjustment/: CMakeLists.txt  README.md
CarSeatAdjustment/Hdr/: EW2023_CarSeatAdjustment.h
CarSeatAdjustment/Scripts/: build.cmd
CarSeatAdjustment/Src/: EW2023_CarSeatAdjustment.c
CarTPMS/: README.md
CarTPMS/CircuitPython/: adafruit-circuitpython-raspberry_pi_pico-en_US-8.0.3.uf2  code.py
CarTPMS/SDcard/: flash_with_anim_tpms.edf  flash_with_anim_tpms.map
CoffeeMachine/: README.md
CoffeeMachine/EW2023_CoffeeMachine/: .gitignore  App_Common.cpp  App_Common.h  BT88x.h  CoPro_Cmds.cpp  CoPro_Cmds.h  EW2023_CoffeeMachine.ino  Gesture.cpp  Gesture.h  Gpu.h  Gpu_Hal.cpp  Gpu_Hal.h  Hal_Utils.cpp  Hal_Utils.h  Platform.h  evehp_widgets.cpp  evehp_widgets.h  image.cpp  image.h  printf.c  printf.h  vm801p.h
CoffeeMachine/SDcard/: e23cfm.edf  e23cfm.map
EvChargePoint/: CMakeLists.txt  README.md
EvChargePoint/Hdr/: App.h  Authenticate.h  Charging.h  Choose_Language.h  Def.h  Event.h  Plugin.h  Report.h  Screen_Saver.h  Transaction.h
EvChargePoint/Project/FT9XX/FT900/: .cproject  .gitignore  .project
EvChargePoint/Project/Msvc/: EvChargePoint_MSVC.sln  EvChargePoint_Msvc.vcxproj  EvChargePoint_Msvc.vcxproj.filters
EvChargePoint/Project/Msvc_Emulator/: EvChargePoint_Emulator.sln  EvChargePoint_Emulator.vcxproj  EvChargePoint_Emulator.vcxproj.filters
EvChargePoint/Project/RP2040/: .cproject  .project
EvChargePoint/Src/: App.c  Authenticate.c  Charging.c  Choose_Language.c  Def.c  Event.c  Plugin.c  Report.c  Screen_Saver.c  Text.c  Transtion.c
EvChargePoint/Test/Flash/: BT81X_Flash_EvChargePoint.map
Inclinometer/: README.md
Inclinometer/CircuitPython/: adafruit-circuitpython-raspberry_pi_pico-en_US-7.3.0.uf2  code.py
(+168 files in other folders)
