
FILE(GLOB SRCS *.c)
FILE(GLOB HDRS *.h)
SOURCE_GROUP("" FILES ${SRCS} ${HDRS})

IF(WIN32 AND ((EVE_APPS_PLATFORM STREQUAL "MULTI") OR (EVE_APPS_GRAPHICS STREQUAL "MULTI")))
  ADD_DEFINITIONS(-DESD_CORE_EXPORT)
  ADD_LIBRARY(esd_core SHARED
    ${SRCS}
    ${HDRS}
  )
ELSE()
  ADD_LIBRARY(esd_core
    ${SRCS}
    ${HDRS}
  )
ENDIF()

TARGET_LINK_LIBRARIES(esd_core
  eve_hal
)
